prometheus-server/prometheus-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: prometheus
  namespace: prometheus-huang
  labels:
    kubernetes.io/name: "Prometheus"
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/component: prometheus
spec:
  type: NodePort
  ports:
    - name: http
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    k8s-app: prometheus
